--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,16 @@
 // Navigation code here
+.nav-container {
+	width: 100%;
+	background-color: @nav-bg;
+	color: @river-bend;
+	nav {
+		padding: 5px 0 10px 0;
+		.flex-center();
+		a {
+			padding: 0 15px;
+			color: @river-bend;
+			text-decoration: none;
+			font-size: 1.65rem;
+		}
+	}
+}
