--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -135,7 +140,7 @@ html {
 html,
 body {
   font-family: 'Ubuntu', sans-serif;
-  color: #5E6164;
+  color: #5e6164;
 }
 h1,
 h2,
@@ -143,7 +148,10 @@ h3,
 h4,
 h5 {
   font-family: 'Russo One', sans-serif;
-  color: #23293B;
+  color: #23293b;
+}
+h1 {
+  font-size: 4rem;
 }
 h2 {
   font-size: 3.2rem;
@@ -160,8 +168,25 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.nav-container {
+  width: 100%;
+  background-color: #f6f6f6;
+  color: #454a59;
+}
+.nav-container nav {
+  padding: 5px 0 10px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav-container nav a {
+  padding: 0 15px;
+  color: #454a59;
+  text-decoration: none;
+  font-size: 1.65rem;
+}
 footer {
-  color: #22283B;
+  color: #22283b;
   background: #f4f4f4;
   padding: 20px 0;
   border: 1px double #e0e0e0;
@@ -169,6 +194,11 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+h1 {
+  width: 100%;
+  text-align: center;
+  padding: 15px 0;
 }
 .home .intro h2 {
   padding: 15px;
@@ -211,6 +241,23 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  color: #f1f1f1;
+  background-color: #22283a;
+  border: 1px solid #dee2e6;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.85rem;
+  cursor: pointer;
+  max-width: 30%;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: #e9ebf2;
+  color: #000000;
+  border: 1px solid #454a59;
 }
 .home .walk .walk-img {
   width: 46%;
