--- a/css/index.css
+++ b/css/index.css
@@ -170,8 +170,12 @@ p {
 }
 .nav-container {
   width: 100%;
-  background-color: #f6f6f6;
+  background-color: rgba(246, 246, 246, 0.85);
   color: #454a59;
+  position: fixed;
+  top: 0;
+  left: 0;
+  border-bottom: 2px solid #f1f1f1;
 }
 .nav-container nav {
   padding: 5px 0 10px 0;
@@ -184,6 +188,9 @@ p {
   color: #454a59;
   text-decoration: none;
   font-size: 1.65rem;
+}
+.nav-container nav a:hover {
+  color: #727a92;
 }
 footer {
   color: #22283b;
@@ -200,22 +207,44 @@ h1 {
   text-align: center;
   padding: 15px 0;
 }
+.home {
+  margin-top: 100px;
+}
 .home .intro h2 {
   padding: 15px;
 }
 .home .intro p {
   padding: 0 15px;
 }
+.home .intro img {
+  max-width: 100%;
+}
 .home .space-images {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images {
+    flex-direction: column;
+  }
 }
 .home .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+    margin: 20px 0;
+    padding: 0 15px;
+  }
+  .home .space-images img:nth-child(2),
+  .home .space-images img:nth-child(3) {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
@@ -233,11 +262,28 @@ h1 {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    padding: 20px 15px 15px 15px;
+    margin-top: 20px;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+  }
+}
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text h3 {
+    margin: 20px 0 10px 0;
+  }
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
@@ -259,12 +305,24 @@ h1 {
   color: #000000;
   border: 1px solid #454a59;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    max-width: 100%;
+    padding: 20px;
+    border-radius: 5px;
+  }
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0;
+  }
+}
 .home .walk .walk-img img {
   width: 100%;
-  height: auto;
   border-radius: 10px;
 }
