--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,6 +7,7 @@ h1 {
 }
 
 .home {
+	margin-top: 100px;
 	.intro {
 		h2 {
 			padding: 15px;
@@ -15,18 +16,32 @@ h1 {
 		p {
 			padding: 0 15px;
 		}
+		img {
+			max-width: 100%;
+		}
 	}
 
 	.space-images {
 		display: flex;
 		flex-wrap: wrap;
 		width: 100%;
-
+		@media @phone {
+			flex-direction: column;
+		}
 		img {
 			width: 28%;
 			margin: 20px 2.5%;
 			border-radius: 20px;
 			height: 100%;
+			@media @phone {
+				width: 100%;
+				margin: 20px 0;
+				padding: 0 15px;
+				&:nth-child(2),
+				&:nth-child(3) {
+					display: none;
+				}
+			}
 		}
 	}
 
@@ -48,12 +63,21 @@ h1 {
 		padding: 50px 60px;
 		display: flex;
 		justify-content: center;
-
+		@media @phone {
+			flex-direction: column-reverse;
+			padding: 20px 15px 15px 15px;
+			margin-top: 20px;
+		}
 		.walk-text {
 			width: 50%;
-
+			@media @phone {
+				width: 100%;
+			}
 			h3 {
 				margin-bottom: 10px;
+				@media @phone {
+					margin: 20px 0 10px 0;
+				}
 			}
 
 			p {
@@ -63,16 +87,23 @@ h1 {
 			.btn {
 				.button(@sea-shell, @btn-bg-color, 1.85rem);
 				max-width: 30%;
+				@media @phone {
+					max-width: 100%;
+					padding: 20px;
+					border-radius: 5px;
+				}
 			}
 		}
 
 		.walk-img {
 			width: 46%;
 			margin-left: 4%;
-
+			@media @phone {
+				width: 100%;
+				margin: 0;
+			}
 			img {
 				width: 100%;
-				height: auto;
 				border-radius: 10px;
 			}
 		}
