--- a/css/index.css
+++ b/css/index.css
@@ -235,6 +235,11 @@ h1 {
   border-radius: 20px;
   height: 100%;
 }
+.home .space-images img:hover {
+  transform: rotate(180deg) scale(-0.75);
+  border-radius: 100%;
+  cursor: pointer;
+}
 @media (max-width: 500px) {
   .home .space-images img {
     width: 100%;
@@ -323,6 +328,87 @@ h1 {
   }
 }
 .home .walk .walk-img img {
+  width: 100%;
+  border-radius: 10px;
+}
+h1 {
+  width: 100%;
+  text-align: center;
+  padding: 15px 0;
+}
+.about {
+  margin-top: 100px;
+}
+.about .intro h2 {
+  padding: 25px;
+  width: 100%;
+  text-align: center;
+}
+.about .walk {
+  border-top: 1px solid #dee2e6;
+  padding: 30px 10px;
+  display: flex;
+  justify-content: center;
+}
+@media (max-width: 500px) {
+  .about .walk {
+    flex-direction: column;
+  }
+}
+.about .walk .walk-text {
+  width: 100%;
+}
+@media (max-width: 500px) {
+  .about .walk .walk-text {
+    width: 100%;
+  }
+}
+.about .walk .walk-text h3 {
+  margin-bottom: 10px;
+}
+@media (max-width: 500px) {
+  .about .walk .walk-text h3 {
+    margin: 20px 0 10px 0;
+  }
+}
+.about .walk .walk-text p {
+  margin-bottom: 26px;
+}
+.about .walk .walk-text .btn {
+  color: #f1f1f1;
+  background-color: #22283a;
+  border: 1px solid #dee2e6;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.85rem;
+  cursor: pointer;
+  max-width: 30%;
+}
+.about .walk .walk-text .btn:hover {
+  background-color: #e9ebf2;
+  color: #000000;
+  border: 1px solid #454a59;
+}
+@media (max-width: 500px) {
+  .about .walk .walk-text .btn {
+    max-width: 100%;
+    padding: 20px;
+    border-radius: 5px;
+  }
+}
+.about .walk .walk-img {
+  width: 46%;
+  margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .about .walk .walk-img {
+    width: 100%;
+    margin: 0;
+  }
+}
+.about .walk .walk-img img {
   width: 100%;
   border-radius: 10px;
 }
