--- a/less/home-page.less
+++ b/less/home-page.less
@@ -33,6 +33,11 @@ h1 {
 			margin: 20px 2.5%;
 			border-radius: 20px;
 			height: 100%;
+			&:hover {
+				transform: rotate(180deg) scale(-0.75);
+				border-radius: 100%;
+				cursor: pointer;
+			}
 			@media @phone {
 				width: 100%;
 				margin: 20px 0;
